DHCP now assigns default gateway and DNS server

--- a/server_root/etc/dhcpd.conf
+++ b/server_root/etc/dhcpd.conf
@@ -5,8 +5,8 @@ host disklessbsd {
     fixed-address 192.168.1.112;
     filename "";
     next-server 192.168.1.179;
-    #option domain-name "example.com";
-    #option domain-name-servers 192.168.1.201;
+    option domain-name-servers 192.168.1.1;
+    option routers 192.168.1.1;		# Default gateway
     option subnet-mask 255.255.255.0;
     option root-path "path-to-ROOTFSDIR";
     option vendor-encapsulated-options "Raspberry Pi Boot   ";
